--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,16 +7,20 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: install qshell
+      uses: foxundermoon/setup-qshell@v1.0
+      with:
+        qshell-version: 2.4.1
+    - name: login to qiniu
+      run: qshell account ${{ secrets.AK }} ${{ secrets.SK }} default
+    - name: install Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 12.x
     - run: npm install
     - run: npm run build --if-present
-   
+    - name: upload
+      run:qshell qupload2 --src-dir ./dist/ --bucket ${{ secrets.BK }}
+    - run: echo "Done"
