--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,8 @@ jobs:
         node-version: 12.x
     - run: npm install
     - run: npm run build --if-present
+    - name: generate 404 page
+      run: cp dist/index.html dist/errno-404
     - name: upload
-      run:qshell qupload2 --src-dir ./dist/ --bucket ${{ secrets.BK }}
+      run:qshell qupload2 --src-dir dist/ --bucket ${{ secrets.BK }}
     - run: echo "Done"
