--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,5 +24,5 @@ jobs:
     - name: generate 404 page
       run: cp dist/index.html dist/errno-404
     - name: upload
-      run: qshell qupload2 --src-dir dist/ --bucket ${{ secrets.BK }} --thread-count 50 --overwrite
+      run: qshell qupload2 --src-dir dist/ --bucket ${{ secrets.BK }} --thread-count 50 --overwrite -d
     - run: echo "Done"
