--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "mars-mta": "^0.0.2",
     "tcb-js-sdk": "^1.3.7",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
