feat: add deploy result

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,4 +22,6 @@ jobs:
           secretKey: ${{ secrets.secretKey }}
           envId: ${{ secrets.envId }}
           staticSrcPath: dist
+    - name: Get the deploy result
+      run: echo "Deploy to cloudbase result ${{ steps.deployStatic.outputs.deployResult }}"
     - run: echo "Done"
