--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,4 +33,5 @@ jobs:
         vercel-org-id: ${{ secrets.ORG_ID}}
         vercel-project-id: ${{ secrets.PROJECT_ID}}
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        vercel-args: '--prod'
     - run: echo "Done"
